# caml-parser

./: .gitignore  CHANGELOG.md  README.md  caml-parser.cabal
src/CamlParser/Lexer/: Lexer.hs  Token.hs
src/CamlParser/Parser/: Assembly.hs  Combinators.hs  Expr.hs  Pattern.hs  Toplevel.hs  Type.hs
src/CamlParser/Plugin/: Interface.hs  Registry.hs
src/CamlParser/Syntax/: Constant.hs  Decl.hs  Expr.hs  Location.hs  Pattern.hs  Type.hs
src/MLQE/: Plugin.hs  Syntax.hs
test/: Main.hs
