cabal-version:      3.0
name:               caml-parser
version:            0.1.0.0
synopsis:           An extensible parser-combinator library for Caml-Light
license:            MIT
author:             overshiki
maintainer:         overshiki@example.com
category:           Language
build-type:         Simple

library
  exposed-modules:
    CamlParser.Lexer.Token
    CamlParser.Lexer.Lexer
    CamlParser.Syntax.Location
    CamlParser.Syntax.Constant
    CamlParser.Syntax.Type
    CamlParser.Syntax.Pattern
    CamlParser.Syntax.Expr
    CamlParser.Syntax.Decl
    CamlParser.Parser.Combinators
    CamlParser.Parser.Expr
    CamlParser.Parser.Pattern
    CamlParser.Parser.Type
    CamlParser.Parser.Toplevel
    CamlParser.Parser.Assembly
    CamlParser.Plugin.Interface
    CamlParser.Plugin.Registry
    MLQE.Syntax
    MLQE.Plugin
  hs-source-dirs:     src
  build-depends:
      base >= 4.16 && < 5
    , containers
    , megaparsec >= 9.0
    , parser-combinators
    , text
    , mtl
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat

test-suite caml-parser-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:
      base
    , caml-parser
    , megaparsec
    , text
    , tasty
    , tasty-hunit
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -rtsopts
